[package]
name = "challenge_zama"
version = "0.1.0"
authors = ["TC5027 <thibert501@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.0"
rayon = "1.5.0"
criterion = "0.3"

[[bench]]
name = "impact_rayon"
harness = false