[package]
name = "robot"
version = "0.1.0"
authors = ["TC5027 <thibert501@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon={git="https://github.com/wagnerf42/rayon", branch="tracing"}
fast-tracer={git="https://github.com/wagnerf42/fast-tracer"}
tracing="*"
rand = "*"